XIVY-13506: Fix overflow of header inside autocompletion-details

--- a/packages/editor/src/components/widgets/code-editor/CodeEditor.css
+++ b/packages/editor/src/components/widgets/code-editor/CodeEditor.css
@@ -31,3 +31,7 @@
 .code-editor .with-lineNumbers {
   left: 35px;
 }
+
+.code-editor .header .type {
+  height: 100%;
+}
